--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'ar.com.lucianoclusa'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
@@ -16,8 +16,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.data:spring-data-releasetrain:Lovelace-SR16'
+	implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.11.64'
+	implementation 'com.github.derjust:spring-data-dynamodb:5.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
+	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
 }
 
 test {
