Add userName validation Few logic refactors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=5000
 server.servlet.context-path=/minesweeper-api
 
 board.max.columns=1000
+
+amazon.dynamodb.endpoint=${DYNAMO_DB_ENDPOINT}
+amazon.aws.accesskey=${ACCESS_KEY}
+amazon.aws.secretkey=${SECRET_KEY}
